--- a/TeX_files/installation.tex
+++ b/TeX_files/installation.tex
@@ -6,6 +6,10 @@ Ich selber benutze aber kein Windows, sondern Linux und Mac, deswegen kann ich h
 
 \subsection{manuelle Installation}
 
+\begin{hinweis}
+    Wenn du schon mal Mods für Minecraft installierst hast (und zwar selber, nicht einfach nur ein fertiges Modpack starten!), lässt sich die Installation recht schnell zusammenfassen: LiquidBounce ist ein Mod.
+\end{hinweis}
+
 Die Vorgehensweise zur Installation ist bei den Versionen für Minecraft 1.8.9 und 1.12.2 gleich. Ich werde des Installationsvorgang aber nur für die Minecraft-Version 1.8.9 beschreiben.
 
 Als erstes musst du im Minecraft-Launcher dir die Minecraft-Version 1.8.9 herunterladen. Dazu erstellst du dir über den Tab \textit{Profile} ein neues Profil und wählst als Version 1.8.9 aus. Dann startest du dieses Profil einmal, um es dann wieder zu schließen.
