--- a/TeX_files/module.tex
+++ b/TeX_files/module.tex
@@ -241,8 +241,115 @@ WaterSpeed & Schneller im Wasser unterwegs sein. \\
 
 \subsection{Player}
 
+\begin{longtable}{p{3cm}|p{10cm}}
+\textbf{Hack} & \textbf{Erklärung} \\
+\hline
+AntiAFK & Umgeht AFK - Timeouts. \\
+\hline
+\rowcolor{lime!50} AntiCactus & Keinen Schaden durch Kakteen bekommen. Sollte immer an sein. \\
+\hline
+AutoFish & Automatisch Fischen \\
+\hline
+\rowcolor{lime!50} AutoRespawn & Automatisch Respawnen \\
+\hline
+\rowcolor{lime!50} AutoTool & Verwendet immer das beste Tool. Somit kann man mit einem Schwert Blöcke im Kampf abbauen, da während des Abbauens automatisch z.B. eine Spitzhacke genutzt wird. \\
+\hline
+Blink & Stoppt die Kommunikation mit dem Server um einen Lag zu simulieren. Beim Deaktivieren wird die Kommunikation wieder freigegeben. Sieht für andere Spieler wie eine Teleportation aus. Wird aber recht zuverlässig von Anticheats erkannt. \\
+\hline
+Eagle & Scaffold für Legits. Braucht man nicht, Scaffold funktioniert eigentlich immer. \\
+\hline
+FarmKingBot & irgendein Bot für einen Spielmodus \\
+\hline
+\rowcolor{lime!50} FastUse & Schneller Essen. Wenn es geht sehr nützlich, aber ein oft vergessener Grund für unerklärliche Banns, wenn es nicht geht. \\
+\hline
+\rowcolor{lime!50} InventoryCleaner & Sortiert und reinigt das Inventar, legt das Schwert auf Slot 1. \\
+\hline
+\rowcolor{lime!50} NoFall & Kein Fallschaden. \\
+\hline
+PotionSaver & Wenn man still steht, läuft die Zeit von Effekten nicht ab. \\
+\hline
+Reach & Höhere Reichweite \\
+\hline
+Regen & Leben aufladen. Geht nur auf Vanilla-Servern. Auch dort darf man sich währenddessen nicht in der Luft sein (kann aber per Option auf in der Luft automatisch deaktiviert werden). Also nur mit Toggle nutzen. \\
+\hline
+Zoot & Keine negativen Potion-Effekte. Geht nur äußerst selten und bannt recht häufig. \\
+\end{longtable}
+
 \subsection{Fun}
+
+\begin{longtable}{p{3cm}|p{10cm}}
+\textbf{Hack} & \textbf{Erklärung} \\
+\hline
+Derp & keine Ahnung, noch nie benutzt \\
+\hline
+SkinDerp & keine Ahnung, noch nie benutzt \\
+\end{longtable}
 
 \subsection{Combat}
 
+\begin{longtable}{p{3cm}|p{10cm}}
+\textbf{Hack} & \textbf{Erklärung} \\
+\hline
+Aimbot & zieht das Fadenkreuz auf den nächsten Gegner. Kann mit Trigger zum Killaura-Ersatz ausgebaut werden. \\
+\hline
+\rowcolor{lime!50} AutoArmor & Nutzt automatisch die beste Rüstung im Inventar. \\
+\hline
+AutoBow & Schießt automatisch mit dem Bogen, wenn dieser voll gespannt ist. \\
+\hline
+AutoClicker & Klickt automatisch. \\
+\hline
+AutoLeave & Verlässt den Server, wenn man unter einer bestimmten Anzahl an Leben ist. Siehe dazu auch Damage und Kick. \\
+\hline
+\rowcolor{lime!50} AutoPot & Wirft automatisch eine Health-Potion auf dich, wenn du unter einer bestimmten Anzahl an Leben bist. \\
+\hline
+\rowcolor{lime!50} AutoSoup & Isst eine Suppe, wenn man unter einer bestimmten Anzahl von Leben ist. Nützlich bei Soup-PVP-Kämpfen. \\
+\hline
+AutoSword / AutoWeapon & Nimmt automatisch das beste Schwert in der Hotbar zum Angreifen. \\
+\hline
+\rowcolor{lime!50} BowAimbot & Aimbot für den Bogen, wie man ihn von Shootern kennt. Der Silent-Modus ist unnötig, den kann man getrost ausschalten. \\
+\hline
+\rowcolor{lime!50} Criticals & Verteilt immer den maximalen Schaden mit einigen Kniffen, zum Beispiel indem es beim Attackieren springt oder es sendet ein entsprechendes Packet. \\
+\hline
+FastBow & Pfeile spammen \\
+\hline
+\rowcolor{lime!50} Hitbox & Hitbox vergrößern. Undetectable bzw. wurde dafür noch nie gebannt. \\
+\hline
+Ignite & Zündet automatisch Gegner mit einem Feuerzeug an. \\
+\hline
+\rowcolor{lime!50} Killaura & Das heilige Gral des Hackers. Verteilt Spielern in einem gewissen Radius vollautomatisch Schaden, und funktioniert dabei ähnlich wie eine Kombination aus Triggerbot und Aimbot. \\
+\hline
+NoFriends & Normalerweise werden Leute in der Friendlist (\texttt{.friend add NAME} / blau angezeigt im ESP) nicht angegriffen. Mit NoFriends deaktiviert man das, zum Beispiel für Duelle gegen Freunde. \\
+\hline
+SuperKnockback & Durch Sprinten vor einem Schlag wird der Knockback des Gegners maximiert. Undetectable. \\
+\hline
+TNTBlock & Blockt automatisch mit dem Schwert, wenn TNT in der Nähe explodiert. \\
+\hline
+TeleportHit & Erlaubt es bei manchen Anticheats Gegner aus großer Entfernung zu schlagen. \\
+\hline
+Trigger & Schlägt automatisch, wenn man mit dem Fadenkreuz auf einem Gegner ist. \\
+\hline
+\rowcolor{lime!50} Velocity & Kein Knockback mehr, oder zumindest zu wenig wie möglich. Kann man eigentlich immer an lassen, aber ist auch von ungeschulten Personen sehr leicht zu erkennen. \\
+\end{longtable}
+
 \subsection{Misc}
+\begin{longtable}{p{3cm}|p{10cm}}
+\textbf{Hack} & \textbf{Erklärung} \\
+\hline
+\rowcolor{lime!50} AntiBot & Verhindert, dass die Killaura Fake-Spieler angreift, die versuchen eine Killaura zu erkennen. \\
+\hline
+AtAllProvider & keine Ahnung \\
+\hline
+ControllerControl & Erlaubt es Minecraft mit dem XBOX-Controller zu steuern. \\
+\hline
+LiquidChat & Ein alternativer Chat zwischen LiquidBounce Nutzern. \\
+\hline
+MidClick & Aktion beim Mittelklick festlegen, zum Beispiel Leute automatisch als Freunde adden. \\
+\hline
+NameProtect & Verändert alle Namen der Mitspieler. Wichtig bei Streamern, dass diese nicht so schnell gefunden werden können. \\
+\hline
+NoRotateSet & Verhindert, dass der Server deinen Kopf dreht (das passiert häufig beim Scaffold). Funktioniert nicht immer. \\
+\hline
+Spammer & Spammt den Chat zu, mit einer einstellbaren Zeile. \\
+\hline
+\rowcolor{lime!50} Teams & Erkennt automatisch das eigene Team, und attackiert nur die anderen Teams. \\
+\end{longtable}
